[tool.poetry]
name = "goit-web-hw-5"
version = "0.1.0"
description = ""
authors = ["filinmbg <filinmbg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
websockets = "^11.0.3"
names = "^0.3.0"
aiofile = "3.5.0"
aiopath = "0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
